<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/camaraFragment"
            android:icon="@drawable/ic_menu_camera"
            android:title="Camara" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/rutaFragment"
            android:icon="@drawable/ic_location24dp"
            android:title="@string/menu_ruta" />
        <item
            android:id="@+id/mapsFragment"
            android:icon="@drawable/ic_map_black"
            android:title="@string/menu_map" />
    </group>
</menu>
