<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/mapsFragment">

    <fragment
        android:id="@+id/nav_home"
        android:name="sv.edu.ues.fia.eisi.pdm_proyecto2.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="sv.edu.ues.fia.eisi.pdm_proyecto2.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="sv.edu.ues.fia.eisi.pdm_proyecto2.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/rutaFragment"
        android:name="sv.edu.ues.fia.eisi.pdm_proyecto2.RutaFragment"
        android:label="@string/menu_ruta"
        tools:layout="@layout/fragment_ruta" />
    <fragment
        android:id="@+id/mapsFragment"
        android:name="sv.edu.ues.fia.eisi.pdm_proyecto2.MapsFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_maps" />
    <fragment
        android:id="@+id/fragment_AgregarRuta"
        android:name="sv.edu.ues.fia.eisi.pdm_proyecto2.RegistrarRuta"
        android:label="fragment__agregar_ruta"
        tools:layout="@layout/fragment__agregar_ruta" />
    <fragment
        android:id="@+id/vozAtextoFragment"
        android:name="sv.edu.ues.fia.eisi.pdm_proyecto2.vozAtextoFragment"
        android:label="fragment_voz_atexto"
        tools:layout="@layout/fragment_voz_atexto" />
<!--<<<<<< HEAD -->
    <fragment
        android:id="@+id/textAvozFragment"
        android:name="sv.edu.ues.fia.eisi.pdm_proyecto2.textAvozFragment"
        android:label="fragment_text_avoz"
        tools:layout="@layout/fragment_text_avoz" />
<!--=======-->
    <activity
        android:id="@+id/sonido"
        android:name="sv.edu.ues.fia.eisi.pdm_proyecto2.Sonido"
        android:label="Sonido" />
<!-->>>>>>> Sonido-->
<!--=======-->
         />
<!-->>>>>>> r_camara-->
    <fragment
        android:id="@+id/camaraFragment"
        android:name="sv.edu.ues.fia.eisi.pdm_proyecto2.camaraX.CamaraFragment"
        android:label="CamaraFragment"/>

<!-- R_graficas-->
    <fragment
        android:id="@+id/graficaFragment"
        android:name="sv.edu.ues.fia.eisi.pdm_proyecto2.GraficaFragment"
        android:label="fragment_grafica"
        tools:layout="@layout/fragment_grafica" />
</navigation>